# COGITO-dft

./: .readthedocs.yaml  README.md  pyproject.toml
COGITO_dft/: COGITO.py  COGITOanalyze.py  COGITOico.py  COGITOpost.py
COGTIO_dft/: COGITO.py  COGITOanalyze.py
docs/: api_ref.md  conf.py  file_struc.md  home.md  index.md  requirements.txt  tutorial.md
docs/PbO/: COG_output.txt  DFT_band_error.txt  TBparams.txt  all_atoms.json  all_bonds.json  all_converge_data.json  all_unique_bonds.json  bond_cohp_plot.html  bond_info.txt  error_output.txt  metadata.json  orb_converg_info.json  overlaps.txt  tb_input.txt
docs/Si/: analysis.txt
docs/_ext/: file_cards.py
docs/_static/css/: custom.css  file_form.css
docs/api/: COGITO.md  COGITOanalyze.md  COGITOico.md  COGITOpost.md
docs/file_struc/COGITO/: input.file  input_old.file  output.file  output_old.file
docs/file_struc/COGITOanalyze/: input.file  output.file
docs/file_struc/COGITOico/: input.file  output.file
docs/file_struc/COGITOpost/: input.file  output.file
